@@ -20,6 +20,7 @@
         <java.version>1.8</java.version>
         <choerodon.starters.version>0.8.1.RELEASE</choerodon.starters.version>
         <powermock.version>1.7.4</powermock.version>
+        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
     </properties>
 
     <dependencies>
@@ -253,6 +254,7 @@
                         <include>**/*Test.java</include>
                         <include>**/*Spec.java</include>
                     </includes>
+                    <argLine>@{argLine}</argLine>
                 </configuration>
             </plugin>
         </plugins>
